--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,3 +1,3 @@
 # This file lists all contributors to this repository
 
-Junius Whitaker <7247@holbertonstudents.com>
+Darion woodard <6683@holbertonstudents.com>
